Removed margin that caused layout issue

--- a/src/Components/Head/Navbar/navbar.css
+++ b/src/Components/Head/Navbar/navbar.css
@@ -2,7 +2,6 @@
 	display: flex;
 	justify-content: space-evenly;
 	width: 50vw;
-	margin: auto;
 	padding-bottom: 1em;
 	border: none;
 	color: white;
